--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,6 +1,6 @@
 
 
-
+$font-family-sans-serif:    "Julius Sans One", "Bad Script",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 // scss-docs-start import-stack
 // Configuration
