Changed font styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -614,7 +614,7 @@ $aspect-ratios: (
 $font-family-sans-serif:      system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" ;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
 $primary-font: "Julius Sans One";
-$secondary-font: "Bad Script";
+$secondary-font: "Lato";
 
 .primary-font {
     font-family: $primary-font;
@@ -622,6 +622,7 @@ $secondary-font: "Bad Script";
 
 .secondary-font {
     font-family: $secondary-font;
+    font-weight: 400;
 }
 
 
