--- a/css/theme.css
+++ b/css/theme.css
@@ -2142,7 +2142,7 @@ progress {
 }
 .form-control:focus {
   color: var(--bs-body-color);
-  background-color: var(--bs-body-bg);
+  background-color: #011B1C;
   border-color: #808d8e;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(1, 27, 28, 0.25);
@@ -2663,7 +2663,7 @@ textarea.form-control-lg {
   color: var(--bs-body-color);
   text-align: center;
   white-space: nowrap;
-  background-color: var(--bs-tertiary-bg);
+  background-color: #011B1C;
   border: var(--bs-border-width) solid var(--bs-border-color);
   border-radius: var(--bs-border-radius);
 }
