--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -936,7 +936,7 @@ $input-border-radius:                   var(--#{$prefix}border-radius) ;
 $input-border-radius-sm:                var(--#{$prefix}border-radius-sm) ;
 $input-border-radius-lg:                var(--#{$prefix}border-radius-lg) ;
 
-$input-focus-bg:                        $input-bg ;
+$input-focus-bg:                        $primary ;
 $input-focus-border-color:              tint-color($component-active-bg, 50%) ;
 $input-focus-color:                     $input-color ;
 $input-focus-width:                     $input-btn-focus-width ;
@@ -1017,7 +1017,7 @@ $input-group-addon-padding-y:           $input-padding-y ;
 $input-group-addon-padding-x:           $input-padding-x ;
 $input-group-addon-font-weight:         $input-font-weight ;
 $input-group-addon-color:               $input-color ;
-$input-group-addon-bg:                  var(--#{$prefix}tertiary-bg) ;
+$input-group-addon-bg:                  $primary;
 $input-group-addon-border-color:        $input-border-color ;
 // scss-docs-end input-group-variables
 
