Footer and font adjustments

--- a/css/theme.css
+++ b/css/theme.css
@@ -8,6 +8,10 @@
   font-weight: 400;
 }
 
+.figcaption-font {
+  font-family: "Bad Script";
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
