--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -615,6 +615,8 @@ $font-family-sans-serif:      system-ui, -apple-system, "Segoe UI", Roboto, "Hel
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
 $primary-font: "Julius Sans One";
 $secondary-font: "Lato";
+$figcaption-font: "Bad Script";
+
 
 .primary-font {
     font-family: $primary-font;
@@ -624,6 +626,11 @@ $secondary-font: "Lato";
     font-family: $secondary-font;
     font-weight: 400;
 }
+
+.figcaption-font {
+  font-family: $figcaption-font;
+}
+
 
 
 
