Color theme, text and fonts

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,8 @@
+// Custom styles
+@import 'color-theme';
+@import 'text';
+
+
+// Bootstrap main file
+@import '../../node_modules/bootstrap/scss/bootstrap';
 
