Color theme changes, green and light color

--- a/src/scss/_color-theme.scss
+++ b/src/scss/_color-theme.scss
@@ -1,9 +1,9 @@
 // Custom theme colors
 $blue:    #011B1C; 
 $orange:  #BB7703;
-$green:   #197958;
+$green:   #207759;
 $cyan:    #AAC7D0 ;
-$light:   #D3DDE0;
+$light:   #AAC7D0;
 $dark:    #33454F;
 
 // theme-color-variables
@@ -41,8 +41,6 @@ $border-color:                $secondary ;
 
 $component-active-color:      $light ;
 $component-active-bg:         $primary ;
-
-
 
 
 #alt-1-filter-button:hover, #alt-2-filter-button:hover, #alt-3-filter-button:hover, #alt-4-filter-button:hover {
