Changed logo-img, font, and added border after nav

--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -1,6 +1,6 @@
 // Typography
 
-$primary-font: "Julius Sans One";
+$primary-font: "Quicksand";
 $secondary-font: "Lato";
 $figcaption-font: "Bad Script";
 
