--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,11 @@
+.logo-img {
+    width: 150px; 
+    max-width: 100%;
+    height: auto;
+  }
+  
+
+
 // Custom styles
 @import 'color-theme';
 @import 'text';
